[Python] Add launch arguments to the example script.  You can either pass the serial port as an argument, or you can define a json configuration file (see config-example.json).  Added some exception handling code to exit gracefully if there's a problem with your serial port or the connection with the Connect.

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 Status API Training Shop Blog About Pricing
+
+
+# Ignore the machine specific config.json file
+config.json
